--- a/css/app.css
+++ b/css/app.css
@@ -8,10 +8,10 @@ section#game  {
 }
 
 section#game div.cat {
-    display: inline-block;
+    display: inline;
     max-width: 49.8%;
+    width: 49%;
     position: relative;
-    cursor: pointer;
 }
 
 section#game div.cat div.counter {
@@ -21,4 +21,8 @@ section#game div.cat div.counter {
     background: #000;
     color: #fff;
     padding:10px 20px;
+}
+
+section#game div.cat img {
+    cursor: pointer;
 }
