--- a/css/app.css
+++ b/css/app.css
@@ -2,27 +2,20 @@ html, body {
     font-family: sans-serif, arial;
 }
 
-
-section#game  {
-    display:inline-block;
-}
-
-section#game div.cat {
-    display: inline;
-    max-width: 49.8%;
-    width: 49%;
-    position: relative;
-}
-
 section#game div.cat div.counter {
-    position: absolute;
-    bottom:20px; right: 20px;
-    font-size: 40px;
-    background: #000;
-    color: #fff;
+    font-size: 20px;
+    background: lightgray;
+    color: #000;
     padding:10px 20px;
+    text-align: right;
 }
 
 section#game div.cat img {
     cursor: pointer;
+    max-width: 100%;
+}
+
+section#game ul#cat-list li:hover {
+    cursor: pointer;
+    font-weight: bold;
 }
